<resources>
    <string name="app_name">BudgetManagement</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_category">Category</string>
    <string name="are_you_sure_to_delete">Czy na pewno chcesz usunąć?</string>
    <string name="delete">Usuń</string>
    <string name="cancel">Anuluj</string>
    <string name="no_data">Brak danych</string>
    <string name="amount">Kwota</string>
    <string name="icon">Icon</string>
    <string name="add">Dodaj</string>
    <string name="add_button_content_desc">Button to add new done transaction</string>
    <string name="january">Styczeń</string>
    <string name="february">Luty</string>
    <string name="march">Marzec</string>
    <string name="april">Kwiecień</string>
    <string name="may">Maj</string>
    <string name="june">Czerwiec</string>
    <string name="july">Lipiec</string>
    <string name="august">Sierpień</string>
    <string name="september">Wrzesień</string>
    <string name="october">Październik</string>
    <string name="november">Listopad</string>
    <string name="december">Grudzień</string>
    <string name="never">Nigdy</string>
    <string name="after_the_deadline">Po terminie</string>
    <string name="realized">Zrealizowano</string>
    <string name="realize">Zrealizuj</string>
    <string name="empty_field">Puste pole!</string>
    <string name="each_day">Co dzień</string>
    <string name="each_week">Co tydzień</string>
    <string name="each_month">Co miesiąc</string>
    <string name="each_year">Co rok</string>
    <string name="edit">Edytuj</string>
    <string name="error_element_with_this_id_was_not_found">Wystąpił błąd! Nie ma takiego elementu w bazie danych</string>
    <string name="today">Dziś</string>
    <string name="category_icon">category icon</string>
    <string name="month_budget_planning">Planowany miesięczny budżet</string>
    <string name="Icon">Ikonka</string>
    <string name="cyclical_transaction">Transakcja cykliczna</string>
    <string name="end_date">Do kiedy</string>
    <string name="title">Tytuł</string>
    <string name="category">Kategoria</string>
    <string name="first_deadline">Pierwsza płatność</string>
    <string name="period_of_time">Okres</string>
    <string name="show_dates">Pokaż daty</string>
    <string name="income">Przychód</string>
    <string name="created_date">Utworzono</string>
    <string name="name">Nazwa</string>
    <string name="last_modification">Ostatnia modyfikacja</string>
    <string name="left">Pozostało</string>
    <string name="deadline">Deadline</string>
    <string name="budget">Budżet</string>
    <string name="create_similar">Utwórz podobne</string>
    <string name="string_with_currency">%1$s zł</string>
    <string name="integer_with_currency">%1$d zł</string>
    <string name="amount_with_percent">%1$d%%</string>
    <string name="amount_with_percent_string">%1$s%%</string>
    <string name="amount_with_day_label">%1$s dni</string>
    <string name="amount_with_percentage_points">%1$spp</string>
    <string name="in_number_days">za %1$d dni</string>
    <string name="for_number_days">od %1$d dni</string>
    <string name="loss">Zobowiązania</string>
    <string name="profit">Dochód</string>
    <string name="transaction_icon_desc">Transaction for transaction amount</string>
    <string name="selectDateToCompare">Edit dates in period to edit</string>
    <string name="date_example">2022 lisopad</string>
    <string name="incomes">Przychody</string>
    <string name="profits">Dochody</string>
    <string name="average_after_deadline">Średnio po terminie</string>
    <string name="paid_on_time">Zapłacone w terminie</string>
    <string name="transactions">Transakcji</string>
    <string name="details">Szczegóły</string>
    <string name="color">Kolor</string>
    <string name="select_color">Wybierz kolor</string>
    <string name="fragment_name_new_category">Nowa kategoria</string>
    <string name="fragment_name_new_transactions">Nowa transakcja</string>
    <string name="fragment_name_edit">Edycja</string>
    <string name="fragment_name_statistics">Statystyki</string>
    <string name="fragment_name_transactions">Transakcje</string>
    <string name="fragment_name_categories">Kategorie</string>
    <string name="number_example">0</string>
    <string name="period_statistic">Statystyki okresowe</string>
    <string name="statistics_card_image">Image for statistics fragment card</string>
    <string name="statistic_move_arrow">Right arrow to move to statistic fragment</string>
    <string name="compare_periods">Porównanie okresów</string>
    <string name="next_payment">Najbliższy wydatek</string>
    <string name="global_statistics_negative_icon">Icon to show negative characteristic of card content</string>
    <string name="next_income">Najbliższy zysk</string>
    <string name="global_statistics_positive_icon">Icon to show positive characteristic of card content</string>
    <string name="executed">Zrealizowano</string>
    <string name="executedDate">Data realizacji</string>
    <string name="select">Wybierz</string>
    <string name="reduce_year">reduce year</string>
    <string name="increase_year">increase year</string>
    <string name="element_removed">Element został usunięty</string>
</resources>