<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.transaction.AddNewComingElement"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainScrollView"
    android:theme="@style/Theme.MaterialComponents.Light">

    <LinearLayout
        android:id="@+id/layoutInScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleLayout"
            style="@style/TextInputLayoutCustomView"
            android:hint="@string/title"
            app:endIconDrawable="@drawable/block_smaller_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title"
                style="@style/TextInputEditTextCustomView"
                android:inputType="textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amountLayout"
            style="@style/TextInputLayoutCustomView"
            android:hint="@string/amount"
            app:endIconDrawable="@drawable/dollar_coin_smaller_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount"
                style="@style/TextInputEditTextCustomView"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/categorySelectorLayout"
            style="@style/LayoutExposedDropMenuCustomView"
            app:endIconDrawable="@drawable/ic_baseline_category_24">

            <AutoCompleteTextView
                android:id="@+id/categorySelector"
                style="@style/AutoCompleteCustomView"
                android:hint="@string/category" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/startDateLayout"
            style="@style/LayoutExposedDropMenuCustomView"
            app:endIconDrawable="@drawable/calendar_smaller_icon">

            <AutoCompleteTextView
                android:id="@+id/startDate"
                style="@style/AutoCompleteCustomView"
                android:hint="@string/first_deadline" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/profitSwitch"
            android:theme="@style/SwitchMaterialTheme"
            style="@style/SwitchMaterialCustomView"
            android:layout_marginBottom="20dp"
            android:text="@string/income" />

        <LinearLayout
            style="@style/cyclicalTransactionLayout">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/cyclicalSwitch"
            android:theme="@style/SwitchMaterialTheme"
            style="@style/SwitchMaterialCustomView"
            android:text="@string/cyclical_transaction" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/periodPickerLayout"
            android:enabled="false"
            style="@style/LayoutExposedDropMenuCustomView">

            <AutoCompleteTextView
                android:id="@+id/periodPicker"
                style="@style/AutoCompleteCustomView"
                android:hint="@string/period_of_time"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/endDateLayout"
            style="@style/LayoutExposedDropMenuCustomView"
            android:enabled="false"
            app:endIconDrawable="@drawable/calendar_smaller_icon">

            <AutoCompleteTextView
                android:id="@+id/endDate"
                style="@style/AutoCompleteCustomView"
                android:hint="@string/end_date"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/showAllDates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="-5dp"
            android:layout_gravity="end"
            android:textSize="16sp"
            android:text="@string/show_dates"
            android:visibility="gone"
            android:textColor="@color/second_color_theme" />

        <Button
            android:id="@+id/acceptButton"
            style="@style/addButton" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>